# HydroDB

./: .gitignore  .pypirc  CNAME  README.md  main.py  project.toml  pyproject.toml
docs/: docusaurus.config.js  package-lock.json
docs/docs/: about_hydrodb.md  get_started.md  intro.md
hydrodb/: __init__.py  filemenager.py  hydro.py
modules/: __init__.py  filemenager.py
src/hydrodb/: __init__.py
src/hydrodb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hydrodb_caio_teixeira_de_paula/: hydrodb.py
tests/: main.py
tests/hydrodb_caio_teixeira_de_paula/: hydrodb.py  visuals.py
