[project]
name = "hydrodb"
version = "1.0.3"
authors = [
  { name="Caio Teixeira de Paula", email="caio.teixeira.paula@gmail.com" },
]
description = "A simple database package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://caioteixeiradepaula.github.io/Hydro/HydroDB/about_hydrodb"
